--- a/css/objects.css
+++ b/css/objects.css
@@ -11,47 +11,25 @@
     left: 65%;
 }
 
-.board {
-    width: 50%;
-    margin-top: -50%;
-    left: 25%;
-    z-index: 5;
-}
-
-.board_vid {
-    width: 34.5%;
-    margin-top: -48.7%;
-    left: 30%;
-    z-index: 6;
-    display: none;
-}
-
-.teacher_desk {
-    width: 45%;
-    right: 25%;
-    bottom: 20%;
-    z-index: 8;
-}
-
-.student1 {
-    width: 18%;
-    right: 0;
-    bottom: 20%;
-}
-
-.imessage {
-    width: 18%;
-    margin-top: -20%;
-    right: 0;
-    z-index: 10;
-    display: none;
-}
-
 .notes {
     position: fixed;
     width: 30%;
     bottom: 0;
     right: 0;
+}
+
+.bubble {
+    position: fixed;
+    font-family: sans-serif;
+    font-size: 1.5em;
+    line-height: 24px;
+    width: 300px;
+    background: #fff;
+    border: 1px solid #000;
+    border-radius: 40px;
+    padding: 2%;
+    text-align: center;
+    color: #000;
 }
 
 
@@ -169,42 +147,6 @@
     bottom: 4%;
     left: 27%;
     z-index: 5; 
-}
-
-/*Left Wall Shelf Equipment*/
-
-.left_wall_shelf {
-    width: 150%;
-    bottom: 0;
-    left: 0;
-    transform: rotateY(-90deg);
-    transform-origin: 0% 50% 0;
-}
-
-.flask1 {
-    width: 10%;
-    top: 5%;
-    left: 5%;
-}
-
-/* Main wall equipment */
-
-.table {
-    width: 50%;
-    height: 20%;
-    margin: 30% 5%;
-    background-color: rgb(168, 39, 16);
-}
-
-.shelf {
-    display: inline;
-    height: 100%;
-}
-
-.shelf img {
-    height: 100%;
-    margin-left: -5%;
-    transform: rotateY(90deg);
 }
 
 /* Directions */
